# even-less-secrets

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nix/modules/: devshell.nix  rust.nix
src/: args.rs  char_attr.rs  charset.rs  color.rs  effect.rs  main.rs  termio.rs
