[package]
authors = ["SandWood Jones <sandwoodjones@outlook.com>"]
edition = "2024"
name = "even-less-secrets"
description = "NMS rewritten in Rust"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
fastrand = "2.3.0"
unicode-width = "0.2.2"

[[bin]]
name = "els"
path = "src/main.rs"
