[package]
authors = ["SandWood Jones <sandwoodjones@outlook.com>"]
edition = "2024"
name = "even-less-secrets"
description = "NMS rewritten in Rust"
version = "1.0.0"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
fastrand = "2.3.0"
hex_color = "3.0.0"
unicode-width = "0.2.2"

[[bin]]
name = "els"
path = "src/main.rs"
